# python-docker-package-CICD-example

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: release-package.yml
huanchh/sandbox/: api.py
scripts/: stop.sh
