[tool.poetry]
name = "python-docker-package-cicd-example"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

packages = [
    { include = "huanchh"}
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.67.0"
orjson = "^3.6.0"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
